--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<tr>
 			<td>
 				<p>
-				I am interested in program analysis and software security.
+				I am interested in program analysis, software engineering and software security.
 				</p>										
 			</td>	
 		</tr>
