--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 							Sydney, NSW, 2052, AUSTRALIA
 				</p>
 				<p>
-						Email :	 changweiz AT cse.unsw.edu.au<br>
+						Email :	 changwei.zou AT unswalumni.com<br>
 				</p>												
 			</td>
 		</tr>
