Add: URL for TIPS code

--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@
 								Dongjie He, Yujiang Gui, Wei Li, Yonggang Tao, <strong>Changwei Zou</strong>, Yulei Sui and Jingling Xue. <br />
 								<strong>A Container-Usage-Pattern-Based Context Debloating Approach for Object-Sensitive Pointer Analysis</strong>.<br />
 								2023 ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications (<strong>OOPSLA'23</strong>),
-								256:1 -- 256:30, 2023. <br /><br />
+								256:1 -- 256:30, 2023. <br />
+								<a href="https://github.com/sheisc/TIPS"> Code </a> <br /><br />
 							</li>
 
 							<li>
