--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 							Sydney, NSW, 2052, AUSTRALIA
 						</p>
 						<p>
-							Email : changwei.zou AT unswalumni.com<br>
+							Email : changweiz AT cse.unsw.edu.au<br>
 						</p>
 					</td>
 				</tr>
@@ -267,7 +267,6 @@
 								<strong>TIPS: Tracking Integer-Pointer Value Flows for C++ Member Function Pointers</strong>.<br />
 								2024 ACM SIGSOFT International Symposium on the Foundations of Software Engineering (<strong>FSE'24</strong>),
 								?? -- ??, 2024. <br />
-
 								<a href="https://github.com/sheisc/TIPS"> Code </a> <br /><br />
 							</li>
 
@@ -276,7 +275,6 @@
 								<strong>A Container-Usage-Pattern-Based Context Debloating Approach for Object-Sensitive Pointer Analysis</strong>.<br />
 								2023 ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications (<strong>OOPSLA'23</strong>),
 								256:1 -- 256:30, 2023. <br /><br />
-								
 							</li>
 
 							<li>
@@ -353,7 +351,9 @@
 								<a href="http://www.tup.tsinghua.edu.cn/bookscenter/book_06684201.html"> Tsinghua
 									University Press</a>, 390 pages, ISBN 9787302426103, 2016.<br />
 								<a href="https://github.com/sheisc/ucc162.3/"> GitHub</a> <br />
+								<img height="35%" src="./book.jpg" width="35%">
 							</li>
+
 
 						</ol>
 
