--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 							<font size="5">Changwei Zou </font>
 						</b>
 						<p>
-							<a href="http://www.cse.unsw.edu.au/~corg/">Compiler Research Group </a><br>
+							<a href="http://www.cse.unsw.edu.au/~jingling">Programming Languages and Compilers Group </a><br>
 							501E, K17<br>
 							<a href="http://www.cse.unsw.edu.au/">School of Computer Science and Engineering</a><br>
 							<a href="http://www.unsw.edu.au/">University of New South Wales</a><br>
